2014-02-19 Arnaud Fontaine
* Move Constraint Property Sheets and Views to their proper bt5s.

2014-01-15 tatuya
* Add Pricing Preference Tab so that we can optimise pricing query.

2013-09-03 arnaud.fontaine
* ZODB Components: Workflow History must always be kept, so avoid an extra step for developers.

2013-08-28 arnaud.fontaine
* ZODB Components: Migrate Documents, Extensions and Tests.

2013-05-28 arnaud.fontaine
* Fix incorrect change of my_view_mode_quantity ProxyField which must point to Base_viewFieldLibrary/my_view_mode_quantity so that figure CSS class is applied (9fcbe9c).

2013-04-17 arnaud.fontaine
* erp5_simulation should not be required as some system do not use simulation.

2012-01-05 Kazuhiko
* move builders from erp5_trade to erp5_simulation_test BT.

2011-12-14 arnaud.fontaine
* Allow to jump from Organisation to its related Sale Trade Conditions, Purchase Trade Conditions and Internal Trade Conditions.

2011-11-22 yusei
* Stop showing detailed DateTime in listbox. This problem started occur due to recent specification change of zope's DateTime.

2011-11-12 yusei
* source_trade and destination_trade must be copied from trade condition to order/delivery.

2011-09-28 yusei
* Improve stock report and show stock also by group.

2011-09-28 yusei
* Improve Base_getBySiteCurrentStockList and support group category.

2011-09-20 tatuya
* Modify Order_zSelectMovement  to make Packing List enable to represent Transfer of rights(ownership). To do this, remove WHERE expression to exclude simulation movements that have same source and destination.

2011-09-15 tatuya
* Fix the issue that Sale Packing List wrongly has Root Applied Rule sometimes when it is created by Delivery Builder with a site which has many activity nodes.

2011-06-23 tatuya
* Show the owner at Inventory module listbox because the inventories can be owned by multiple sections.

2011-06-02 arnaud.fontaine
* Fix issue on stock listbox when there is no unit conversion defined.
